to make sun ok